Fix for bug 52257. mResponseDataListener could be null. r=valeski, brendan.